--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-#Junk
-.DS_Store
-.vscode/
-.idea/
+build/
 
 # Logs
 logs
@@ -78,7 +75,7 @@ typings/
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
-.parcel-cache
+.cache
 
 # Next.js build output
 .next
